--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.2",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
